# sigmod2022_submission

./: README.md
cxx/: CMakeLists.txt  airline_cm.out  benchmark_categorical_index.cpp  benchmark_sort  benchmark_sort.cpp  exp.out  experiment.output  experiment_full.output  exps.out  prep_stocks_data.sh  results_0_2_4_a1.out  results_8-17-1654.csv  results_8-18-225.csv  results_octree.out  run_airline_experiments.sh  run_chicago_exps.sh  run_chicago_taxi_experiments.sh  run_correlation_index.cpp  run_correlation_index_autoopt.cpp  run_correlation_index_inserts.cpp  run_exps_test.sh  run_inflated_correlation_index.sh  run_linear_correlation_index.sh  run_mapped_correlation_index.sh  run_mapped_correlation_index_autoopt.sh  run_msft_building_experiments.sh  run_secondary_index.sh  run_stocks_experiments.sh  stocks.out  stocks_cm.out  stocks_cm_w100.out  stocks_cm_w500.out  stocks_linear.out  stocks_linear_fair_w100.out  stocks_linear_fair_w500.out  stocks_linear_w100.out  stocks_linear_w50.out  stocks_linear_w500.out  stocks_w100.out  stocks_w500.out  (+9 more)
cxx/include/: binary_search_index.h  bucketed_secondary_index.h  clustered_column_order_dataset.h  column_order_dataset.h  combined_correlation_index.h  composite_index.h  compressed_column_order_dataset.h  compressed_column_order_dataset_OLD.h  correlation_indexer.h  correlation_tracker.h  datacube.h  dataset.h  dummy_index.h  file_utils.h  flags.h  flood_index.h  hermit_rewriter.h  index_builder.h  indexer.h  inmemory_column_order_dataset.h  just_sort_index.h  linear_model_rewriter.h  mapped_correlation_index.h  math_utils.h  measure_beta_index.h  merge_utils.h  monotonic_RMI.h  octree_index.h  outlier_index.h  outlier_index_old.h  primary_btree_index.h  primary_indexer.h  query_engine.h  rewriter.h  row_order_dataset.h  secondary_btree_index.h  secondary_indexer.h  single_column_rewriter.h  target_bucket.h  timsort.hpp  (+5 more)
cxx/raw_results/: base_gen.output  octree_base_run.output  stocks_flood_test.output  trs_trial_run.output
cxx/results/: octree_base_run_1599792640  octree_base_run_1599803770  octree_base_run_1599847632  octree_base_run_1599893128  octree_base_run_1599893524  raw_chicago_taxi_corrix_0_2_3_a0.2_q4_s01.out  raw_chicago_taxi_corrix_0_2_3_a0.2_q5_s01.out  raw_chicago_taxi_corrix_0_2_3_a0.2_q8_s01.out  raw_chicago_taxi_corrix_0_2_3_a0.5_q4_s01.out  raw_chicago_taxi_corrix_0_2_3_a0.5_q5_s01.out  raw_chicago_taxi_corrix_0_2_3_a0.5_q8_s01.out  raw_chicago_taxi_corrix_0_2_3_a1_q3_s01.out  raw_chicago_taxi_corrix_0_2_3_a1_q4_s01.out  raw_chicago_taxi_corrix_0_2_3_a1_q5_s01.out  raw_chicago_taxi_corrix_0_2_3_a1_q8_s01.out  raw_chicago_taxi_corrix_0_2_8_a0.2_q3_s01.out  raw_chicago_taxi_corrix_0_2_8_a0.2_q4_s01.out  raw_chicago_taxi_corrix_0_2_8_a0.2_q5_s01.out  raw_chicago_taxi_corrix_0_2_8_a0.2_q8_s01.out  raw_chicago_taxi_corrix_0_2_8_a0.5_q3_s01.out  raw_chicago_taxi_corrix_0_2_8_a0.5_q4_s01.out  raw_chicago_taxi_corrix_0_2_8_a0.5_q5_s01.out  raw_chicago_taxi_corrix_0_2_8_a0.5_q8_s01.out  raw_chicago_taxi_corrix_0_2_8_a1_q3_s01.out  raw_chicago_taxi_corrix_0_2_8_a1_q4_s01.out  raw_chicago_taxi_corrix_0_2_8_a1_q5_s01.out  raw_chicago_taxi_corrix_0_2_8_a1_q8_s01.out  raw_chicago_taxi_corrix_a0.2_q3_s0001.out  raw_chicago_taxi_corrix_a0.2_q3_s001.out  raw_chicago_taxi_corrix_a0.2_q3_s01.out  raw_chicago_taxi_corrix_a0.2_q3_s05.out  raw_chicago_taxi_corrix_a0.2_q3_s05_sort.out  raw_chicago_taxi_corrix_a0.2_q5_s0001.out  raw_chicago_taxi_corrix_a0.2_q5_s001.out  raw_chicago_taxi_corrix_a0.2_q5_s01.out  raw_chicago_taxi_corrix_a0.2_q5_s05.out  raw_chicago_taxi_corrix_a0.2_q8_s01.out  raw_chicago_taxi_corrix_a0.5_q3_s0001.out  raw_chicago_taxi_corrix_a0.5_q3_s001.out  raw_chicago_taxi_corrix_a0.5_q3_s01.out  (+39 more)
cxx/results_backup/: raw_chicago_taxi_corrix_a0.2_flattened_q3_s001.out  raw_chicago_taxi_corrix_a0.2_flattened_q3_s01.out  raw_chicago_taxi_corrix_a0.5_flattened_q3_s001.out  raw_chicago_taxi_corrix_a0.5_flattened_q3_s001_heapmerge.out  raw_chicago_taxi_corrix_bw_q3_s001.out  (+50 more)
(+2424 files in other folders)
